screenshot: fix a typo

The cursor was never included in screenshots because of a typo
about the screenshot type. There is a comment which explains the
reasoning behind the intended check, but the code is not following.

https://bugzilla.gnome.org/show_bug.cgi?id=772133